<resources>
    <string name="app_name" translatable="false">Fast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="messages_fragment">Messages</string>
    <string name="friends_fragment">Friends</string>
    <string name="fragment_settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="exit_message">Do you really want to exit?</string>
    <string name="type_message">Your message&#8230;</string>
    <string name="logout">Log out from account</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="type_message_error">Input your message!</string>
    <string name="warning">Warning!</string>
    <string name="not_connected_to_internet">You are not connected with Internet!</string>
    <string name="exit">Exit</string>
    <string name="activity_materials_title">Chat Materials</string>
    <string name="materials_photo">Photos</string>
    <string name="materials_audio">Audios</string>
    <string name="materials_video">Videos</string>
    <string name="materials_doc">Documents</string>
    <string name="wait">Wait</string>
    <string name="login_wait_message">Authorizing&#8230;</string>
    <string name="leave_from_chat">Leave from chat</string>
    <string name="return_to_chat">Return to chat</string>
    <string name="leave_chat_confirm">You want to leave from this chat?</string>
    <string name="return_chat_confirm">You want to return to this chat?</string>
    <string name="you_leaved_chat">You leaved this chat.</string>
    <string name="returned_to_chat">You returned to this chat.</string>
    <string name="online_from">Online from</string>
    <string name="last_seen_at">Last seen at</string>
    <string name="online_from_phone">Online from phone</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="authorize">Authorize</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="message_history_deleted">Message\'s history was been deleted.</string>
    <string name="confirm_delete_dialog">Are you really want to delete this dialog?</string>
    <string name="functional_alert">Features</string>
    <string name="clean_history">Delete message\' history</string>
    <string name="event">event</string>
    <string name="group_type">group</string>
    <string name="page_type">page</string>
    <string name="closed_type">Closed</string>
    <string name="open_type">Open</string>
    <string name="private_type">Private</string>
    <string name="change_title">Change title</string>
    <string name="cancel">Cancel</string>
    <string name="title_changed">Title changed.</string>
    <string name="chat_title">Chat title</string>
    <string name="version_new">Version: %s</string>
    <string name="restart">Restart</string>
    <string name="proxy">Proxy</string>
    <string name="vk_api_domen">VK Api Domen</string>
    <string name="vk_oauth_domen">VK Oauth Domen</string>
    <string name="debug">Debug</string>
    <string name="template">Template</string>
    <string name="message_template">Message template</string>
    <string name="quickmoon_yellow_moon_description">Moon for QuickMoon®</string>
    <string name="quickmoon_yellow_moon">Yellow moon</string>
    <string name="quickmoon">QuickMoon®</string>
    <string name="functional">Functional</string>
    <string name="accent_color">Accent color</string>
    <string name="interface_title">Interface</string>
    <string name="proxy_servers">Your proxy\'s servers</string>
</resources>
